
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_10__ TYPE_2__ ;
typedef struct TYPE_9__ TYPE_1__ ;


struct TYPE_9__ {float dw; float dx; float dh; float dy; } ;
typedef TYPE_1__ dbox ;
struct TYPE_10__ {int h; int y; int w; int x; } ;
typedef TYPE_2__ box ;


 TYPE_1__ derivative (TYPE_2__,TYPE_2__) ;
 float overlap (int ,int ,int ,int ) ;

dbox dintersect(box a, box b)
{
    float w = overlap(a.x, a.w, b.x, b.w);
    float h = overlap(a.y, a.h, b.y, b.h);
    dbox dover = derivative(a, b);
    dbox di;

    di.dw = dover.dw*h;
    di.dx = dover.dx*h;
    di.dh = dover.dh*w;
    di.dy = dover.dy*w;

    return di;
}
